@@ -964,8 +964,10 @@ var gamefox_page =
         {
           editTextNode.textContent = leftMsgData ? '' : ' | ';
 
+          var editListSpan = doc.createElement('span');
+          editListSpan.className = 'gamefox-edit-list';
+
           var editList = doc.createElement('select');
-          editList.className = 'gamefox-edit-list';
           editList.addEventListener('click', gamefox_messages.fetchEdits,
               false);
 
@@ -973,13 +975,8 @@ var gamefox_page =
           editListText.textContent = '(edited)';
           editList.appendChild(editListText);
 
-          msgStats.insertBefore(editList, editTextNode.nextSibling);
-
-          // We don't know the size of the <select> element (it's based on the
-          // OS widget size), so for best results we need to set the position
-          // from here rather than a CSS file
-          if (!leftMsgData)
-            editList.style.marginTop = 17 - editList.offsetHeight + 'px';
+          editListSpan.appendChild(editList);
+          msgStats.insertBefore(editListSpan, editTextNode.nextSibling);
         }
 
         var postDate = postDateNode.textContent.replace(/(Posted:? )?/g, '')
