@@ -175,11 +175,11 @@
         <td>-</td>
     </tr>
 
-    <tr>
+    <tr class="removed">
         <td>select.gamefox-edit-list</td>
         <td>Lists the edit history of a post.</td>
         <td>0.8.4</td>
-        <td>-</td>
+        <td>0.8.5</td>
     </tr>
 
     <tr class="removed">
@@ -194,6 +194,14 @@
         <td>Contains current GameFAQs time. Added to the loginbox and
             QuickPost.</td>
         <td>0.7.8</td>
+        <td>-</td>
+    </tr>
+
+    <tr>
+        <td>span.gamefox-edit-list</td>
+        <td>Contains the &lt;select&gt; element which lists the edit history of
+            a post.</td>
+        <td>0.8.5</td>
         <td>-</td>
     </tr>
 
