@@ -1,5 +1,6 @@
 0000-00-00:
     * version 0.8.5
+    * Make the edit history drop-down menu look nicer
 
 2011-11-25:
     * version 0.8.4
